--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "private": true,
   "bucket-name": "keen-js",
   "dependencies": {
-    "lodash": "3.2.0",
-    "string": "^2.0.1",
-    "stringify": "~3.0.0",
-    "react": "~0.13.3",
-    "flux": "^2.0.3",
-    "reactify": "~0.15.1",
-    "react-router": "0.13.3",
     "classnames": "2.1.2",
     "connect-history-api-fallback": "0.0.5",
-    "superagent": "1.2.0",
+    "flux": "^2.0.3",
+    "grunt": "^0.4.5",
+    "json-stable-stringify": "1.0.0",
+    "keymirror": "~0.1.0",
+    "lodash": "3.2.0",
     "moment": "^2.7.0",
     "qs": "2.2.3",
-    "json-stable-stringify": "1.0.0",
-    "keymirror": "~0.1.0"
+    "react": "~0.13.3",
+    "react-router": "0.13.3",
+    "reactify": "~0.15.1",
+    "string": "^2.0.1",
+    "stringify": "~3.0.0",
+    "superagent": "1.2.0"
   },
   "browserify-shim": {
     "moment": "^2.7.0",
@@ -30,27 +31,26 @@
     ]
   },
   "devDependencies": {
+    "browserify": "4.2.3",
     "browserify-shim": "~3.7.0",
     "chai": "^2.3.0",
     "chai-as-promised": "^5.0.0",
-    "gulp": "^3.8.10",
+    "grunt-mocha-phantomjs": "^1.0.0",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "~2.1.0",
+    "gulp-awspublish": "^2.0.2",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "~2.5.2",
+    "gulp-connect": "2.0.6",
     "gulp-less": "3.0.0",
     "gulp-minify-css": "~0.4.6",
+    "gulp-mocha": "^1.0.0",
+    "gulp-mocha-phantomjs": "^0.8.1",
+    "gulp-react": "2.0.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.1.0",
-    "gulp-react": "2.0.0",
-    "gulp-connect": "2.0.6",
-    "gulp-clean": "~0.3.1",
-    "gulp-concat": "~2.5.2",
-    "gulp-awspublish": "0.0.23",
     "run-sequence": "~1.0.1",
-    "browserify": "4.2.3",
-    "vinyl-source-stream": "1.0.0",
-    "gulp-mocha": "^1.0.0",
-    "gulp-mocha-phantomjs": "0.5.0",
-    "mocha-phantomjs": "^3.5.0",
-    "phantomjs": "^1.9.9",
-    "sinon": "1.14.1"
+    "sinon": "1.14.1",
+    "vinyl-source-stream": "1.0.0"
   }
 }
