--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "classnames": "2.1.2",
     "connect-history-api-fallback": "0.0.5",
+    "express": "^4.13.1",
     "flux": "^2.0.3",
     "grunt": "^0.4.5",
+    "http-server": "^0.8.0",
     "json-stable-stringify": "1.0.0",
     "keymirror": "~0.1.0",
     "lodash": "3.2.0",
